--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://enj657.github.io/travel-itinerary-react",
+  "homepage": "https://enj657.github.io/travel-itinerary-react/",
   "name": "travel_itinerary_app",
   "version": "0.1.0",
   "private": true,
